force-app/main/default/objects/Test_Drive__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the booking to an existing Contact, when available</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Contact_Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>