force-app/main/default/objects/Test_Drive__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Dealer (Account) associated to the booking</description>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Dealer_Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>