force-app/main/default/objects/Test_Drive__c/fields/ExternalSourceId__c.field-meta.xml
<CustomField>
    <fullName>ExternalSourceId__c</fullName>
    <description>Idempotency key from external/Agentforce context</description>
    <externalId>true</externalId>
    <label>External Source Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>