force-app/main/default/objects/Test_Drive__c/fields/LastAgentSessionId__c.field-meta.xml
<CustomField>
    <fullName>LastAgentSessionId__c</fullName>
    <description>Stores the last Agentforce session identifier associated with this booking</description>
    <label>Last Agent Session Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>