force-app/main/default/objects/Test_Drive__c/fields/PreferredDateTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredDateTime__c</fullName>
    <description>Customer preferred date/time for the test drive</description>
    <label>Preferred Date/Time</label>
    <type>DateTime</type>
</CustomField>