force-app/main/default/objects/Test_Drive__c/fields/ServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>ServiceAppointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the booking to the Field Service Service Appointment created for this test drive</description>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>ServiceAppointment_Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>