force-app/main/default/objects/Test_Drive__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Origin channel/source of the test drive booking</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce</fullName>
                <default>true</default>
                <label>Agentforce</label>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>CallCenter</fullName>
            </value>
            <value>
                <fullName>In-Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>