force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Date_Time__c</fullName>
    <label>Test Drive Date Time</label>
    <type>DateTime</type>
</CustomField>