force-app/main/default/objects/Test_Drive__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>Postal/ZIP code used for dealer/territory routing</description>
    <inlineHelpText>Enter the 5-digit ZIP or valid postal code without spaces</inlineHelpText>
    <label>Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>