force-app/main/default/objects/Test_Drive__c/validationRules/Booked_Needs_SA.validationRule-meta.xml
<ValidationRule>
    <fullName>Booked_Needs_SA</fullName>
    <active>true</active>
    <description>When Status is Booked, a Service Appointment must be linked.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Booked&quot;),
    ISBLANK(ServiceAppointment__c)
)</errorConditionFormula>
    <errorDisplayField>ServiceAppointment__c</errorDisplayField>
    <errorMessage>Service Appointment is required when Status is Booked.</errorMessage>
</ValidationRule>