force-app/main/default/objects/Test_Drive__c/validationRules/PreferredDate_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>PreferredDate_Future</fullName>
    <active>true</active>
    <description>PreferredDateTime__c must be in the future when Status is Requested, Offered, or Booked.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, &quot;Requested&quot;),
        ISPICKVAL(Status__c, &quot;Offered&quot;),
        ISPICKVAL(Status__c, &quot;Booked&quot;)
    ),
    NOT(ISBLANK(PreferredDateTime__c)),
    PreferredDateTime__c &lt; NOW()
)</errorConditionFormula>
    <errorDisplayField>PreferredDateTime__c</errorDisplayField>
    <errorMessage>Preferred Date/Time must be in the future for Requested, Offered, or Booked.</errorMessage>
</ValidationRule>