force-app/main/default/objects/Test_Drive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer__c</columns>
    <columns>Vehicle__c</columns>
    <columns>PreferredDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>Model_Interested__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>